<resources>
    <string name="app_name">BinaryOptions</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="select_language">Select Language</string>
    <string name="warning">WARNING</string>
    <string name="warning_txt_1">Registration is currently</string>
    <string name="warning_txt_2">unavailable</string>
    <string name="warning_txt_3">in Russia, Japan, Australia,</string>
    <string name="warning_txt_4">Iran, Israel, Canada, Syria, Sidan</string>
    <string name="warning_txt_5">and the USA</string>
    <string name="warning_txt_6">if you think you\'re seeing this message</string>
    <string name="warning_txt_7">by mistake please contact</string>
    <string name="english">English</string>
    <string name="chinese">中文</string>
    <string name="russian">Russian</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="italian">Italian</string>
    <string name="brazilian">Brazilian</string>
    <string name="thiland">Thailand</string>
    <string name="korean">Korean</string>
    <string name="norway">Norsk</string>
    <string name="sweden">Svenska</string>
    <string name="portugal">Português</string>
    <string name="arabic">Arabic</string>
    <string name="indonesian">Indonesian</string>
    <string name="open_account">Open Account</string>
    <string name="feedback_mail">noreply@iqoption.binaryoptionsdevelopers.com</string>
    <string name="feedback_subject">IQ Option App Feedback and Inquiry Form (com.kgom.binaryoptionsGP)</string>
    <string name="mac_desktop_mail">Send me the link to the IQ Option MacOSX and Windows PC Desktop Site (com.kgom.binaryoptions)</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="exit">EXIT</string>
    <string name="continue_iq">Continue to IQ Option</string>
    <string name="alert_redirect">You will now be redirected to the USA and Worldwide approved Binary Option Auto Trading Robot. </string>
    <string name="iq_robot_url">https://play.google.com/store/apps/details?id=com.app.p8153AJ</string>
    <string name="google_play_url">http://app.appsflyer.com/com.iqoption/?pid=7745&amp;c=com.kgom.binaryoptionsGP</string>
    <string name="exit_txt">Exit</string>
    <string name="continue_txt">Continue</string>
    <string name="alert_freedemo">Note: Once you complete the IQ Option FREE Registration, check your email inbox (Also check your SPAM or JUNK folders). And click on the email CONFIRMATION link. Or simply download the app and login with your registration credentials. (Prior to making a deposit, you will need to confirm your registered email)</string>
    <string name="click_to_continue">Click To Continue</string>
    <string name="terms_and_policy"><u>IQOption &quot;Terms &amp; Conditions&quot;</u></string>
    <string name="signup_form">Demo Sign-Up Form</string>
    <string name="discount">30% Promo Discount</string>
    <string name="free_demo">Free $1000 Demo</string>
    <string name="tournament">$100,000 Tournament</string>
    <string name="iq_robot">IQ Option Robot</string>
    <string name="previous">PREVIOUS</string>
    <string name="next">NEXT</string>
    <string name="get_it">GET IT ON</string>
    <string name="google_play">Google play</string>
    <string name="notifications">Notifications</string>
    <string name="terms_conditions_url">https://iqoption.com/cn/terms-and-conditions/terms-conditions</string>
    <string name="terms_conditions_need">Please read the terms and conditions and check it.</string>
    <string name="notification_time_format">MM/dd/yyyy HH:mm a</string>
    <string name="basic_tutorial">BASIC TUTORIAL</string>
    <string name="video_tutorial">VIDEO TUTORIAL</string>
    <string name="binary_url_1">http://goo.gl/NGlSC7</string>
    <string name="binary_url_2">http://goo.gl/LofkZL</string>
    <string name="binary_url_3">http://goo.gl/fAhzwX</string>
    <string name="binary_url_4">http://goo.gl/2gfrzx</string>
    <string name="binary_url_5">http://goo.gl/C6A43n</string>
    <string name="option_url_1">http://goo.gl/MKQrv3</string>
    <string name="option_url_2">https://s3.amazonaws.com/scratchypage/example+1/scratchy.html</string>
    <string name="option_url_3">http://goo.gl/5PvWDD</string>
    <string name="option_url_4">http://goo.gl/LeytF7</string>
    <string name="option_url_5">https://s3.amazonaws.com/scratchypage/example+1/get-app-4391FI.html</string>
    <string name="option_url_6">mailto:promos@iqoptionpromo.com</string>
    <string name="appsflyer_dev_key">wNL8QQaTgFYggaoLRd3RJi</string>
    <string name="daily_news_url"></string>
    <string name="profit_hacks_url"></string>
    <string name="trading_alerts_url">https://blog.iqoption.com/calendar?columns=exc_flags,exc_currency,exc_importance,exc_actual,exc_forecast,exc_previous&amp;category=_employment,_economicActivity,_inflation,_credit,_centralBanks,_confidenceIndex,_balance,_Bonds&amp;importance=3&amp;features=datepicker,timezone&amp;countries=25,6,72,22,17,10,35,43,56,110,11,26,12,4,5&amp;calType=week&amp;timeZone=55&amp;lang=1</string>
    <string name="english_url">https://iqoption.com/land/register-long/en/?aff=7745&amp;afftrack=IFRAME-REGISTER-LONG-kgom-binaryoptions-28-MAR-2017-ANDROID-EN</string>
    <string name="russian_url">https://iqoption.com/land/registration/ru/?aff=7745&amp;afftrack=com.kgom.binaryoptionsGP-ru</string>
    <string name="chinese_url">https://iqoption.com/land/register-long/cn/?aff=7745&amp;afftrack=IFRAME-REGISTER-LONG-kgom-binaryoptions-28-MAR-2017-ANDROID-CN</string>
    <string name="italian_url">https://iqoption.com/land/register-long/it/?aff=7745&amp;afftrack=IFRAME-REGISTER-LONG-kgom-binaryoptions-28-MAR-2017-ANDROID-IT</string>
    <string name="thiland_url">https://iqoption.com/land/register-long/th/?aff=7745&amp;afftrack=IFRAME-REGISTER-LONG-kgom-binaryoptions-28-MAR-2017-ANDROID-TH</string>
    <string name="german_url">https://iqoption.com/land/register-long/de/?aff=7745&amp;afftrack=IFRAME-REGISTER-LONG-kgom-binaryoptions-28-MAR-2017-ANDROID-DE</string>
    <string name="indonesian_url">https://iqoption.com/land/register-long/id/?aff=7745&amp;afftrack=IFRAME-REGISTER-LONG-kgom-binaryoptions-28-MAR-2017-ANDROID-ID</string>
    <string name="french_url">https://iqoption.com/promo/registration_fr/?aff=7745&amp;afftrack=IFRAME-com.kgom.binaryoptionsGP-fr</string>
    <string name="spanish_url">https://iqoption.com/land/register-long/es/?aff=7745&amp;afftrack=IFRAME-REGISTER-LONG-kgom-binaryoptions-28-MAR-2017-ANDROID-ES</string>
    <string name="arabic_url">https://iqoption.com/land/register-long/ar/?aff=7745&amp;afftrack=IFRAME-REGISTER-LONG-kgom-binaryoptions-28-MAR-2017-ANDROID-AR</string>
    <string name="brazilian_url">https://iqoption.com/land/register-long/pt/?aff=7745&amp;afftrack=IFRAME-REGISTER-LONG-kgom-binaryoptions-28-MAR-2017-ANDROID-PT</string>
    <string name="korean_url">https://iqoption.com/land/register-long/ko/?aff=7745&amp;afftrack=IFRAME-REGISTER-LONG-kgom-binaryoptions-28-MAR-2017-ANDROID-KO</string>
    <string name="mac_desktop_url">https://iqoption.com/land/register-long/en/?aff=7745&amp;afftrack=IFRAME-REGISTER-LONG-Desktop-Registration-kgom-binaryoptions-28-MAR-2017-ANDROID-EN</string>
    <string name="video_tutorial_url">https://iqoption.com/en/tutorials?aff=7745&amp;afftrack=com.kgom.binaryoptionsGP-VIDEOS</string>
    <string name="weekly_profit">https://s3.amazonaws.com/iq-option-weekly-stats-url/weekly-stats.html</string>
    <string name="sweden_url">https://iqoption.com/land/register-long/se/?aff=7745&amp;afftrack=IFRAME-REGISTER-LONG-kgom-binaryoptions-28-MAR-2017-ANDROID-SE</string>
    <string name="norway_url">https://iqoption.com/land/register-long/no/?aff=7745&amp;afftrack=IFRAME-REGISTER-LONG-kgom-binaryoptions-28-MAR-2017-ANDROID-NO</string>
    <string name="portugal_url">https://iqoption.com/land/register-long/pt/?aff=7745&amp;afftrack=IFRAME-REGISTER-LONG-kgom-binaryoptions-28-MAR-2017-ANDROID-PORTUGAL</string>
    <string name="tip_1" formatted = "false">We have received thousands of tips and advice since the inception of this app. And we have gathered data from the most successful IQ Option traders. The most important tip was to trade &quot;Binary&quot; only and not &quot;Turbo&quot; trade. Binary trading is less volatile, with reduced risk and forex fluctuation. On your mobile device, this is selectable from the &quot;Binary&quot; dropdown, from the upper trading dashboard menu.</string>
    <string name="tip_2" formatted = "false">Our traders are reporting that they are earning increased profits by trading FOREX &quot;Over The Counter&quot; Options, on the Mobile trading app. The Saturday and Sunday trading environment is less volatile and far less kinetic. Some traders have reported profit increases of 85%, compared to general weekly trading. So next time you are bored on a weekend, try OTC trading with your mobile device, and PROFIT !</string>
    <string name="tip_3" formatted = "false">Now that you are safely &quot;Binary&quot; trading and NOT &quot;Turbo&quot; trading, in accordance with Tip No#1. You should now select an extended option timeframe. Our traders have reported the highest profits, if the option is a 60+ minute timeframe. The reduced frequency trading, significantly reduces risk by a factor of 67%, and hence increases profit potential. We acknowledge that it may be less exciting, and less heart pumping, however at the end of the day &quot;Profit is King&quot;. So please resist the temptation of &quot;Turbo&quot; trading.</string>
    <string name="tip_4" formatted = "false">NEVER trade based on emotion, whether it\'s happiness, anger or frustration. Only ever trade based on facts. Major impact FOREX currency pairs news events, present ideal unemotional trading opportunities. Within the app we have provided a list of the most critical FOREX news events for the month. We have detailed the date, currency pair, GMT time and trading trends. So please ALWAYS refer to our &quot;Trading Alerts&quot; section when trading.</string>
</resources>