<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tut_1"
    android:id="@+id/background">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        android:background="@color/color_clear"
        android:id="@+id/actionBar">
        <ImageView
            android:layout_height="match_parent"
            android:layout_width="@dimen/actionbar_info_icon_size"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/back_ic"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:clickable="true"
            android:layout_marginRight="@dimen/actionbar_info_margin_left"
            android:id="@+id/back_icon"
            android:onClick="onClick"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/drawable_button_dark_green"
        android:clickable="true"
        android:padding="5dp"
        android:gravity="center_vertical"
        android:onClick="onClick"
        android:id="@+id/open_account"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_white"

            android:gravity="center"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:textSize="@dimen/dimen_30sp"
            android:text = "@string/open_account"/>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:weightSum="7"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            ></LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height ="match_parent"
            android:layout_weight="2">
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:background="@drawable/drawable_button_orange"

                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:clickable="true"
                android:padding="5dp"
                android:gravity="center_vertical"
                android:onClick="onClick"

                android:id="@+id/previous_btn">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_white"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/text_size_normal"
                    android:text = "@string/previous"/>

            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_5dp"
                android:layout_marginRight="@dimen/dimen_5dp"
                android:textColor="@color/color_white"
                android:textSize="@dimen/dimen_20sp"
                android:text="@string/exit"
                android:gravity="center"
                android:layout_marginBottom="@dimen/dimen_5dp"
                android:id="@+id/exit_label"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_5dp"
                android:layout_marginRight="@dimen/dimen_5dp"
                android:adjustViewBounds="true"
                android:id="@+id/tut_indicator"

                android:src="@drawable/tut_indicator_1"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height ="match_parent"
            android:layout_weight="2">
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:background="@drawable/drawable_button_orange"

                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:clickable="true"
                android:padding="5dp"
                android:gravity="center_vertical"
                android:onClick="onClick"

                android:id="@+id/next_btn">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_white"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/text_size_normal"
                    android:text = "@string/next"/>

            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>