<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_back"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionbar_height"
            android:background="@color/color_black"
            android:id="@+id/actionBar">
            <ImageView
                android:layout_height="match_parent"
                android:layout_width="@dimen/actionbar_info_icon_size"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/back_ic"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="@dimen/actionbar_info_margin_left"
                android:id="@+id/back_icon"
                android:clickable="true"
                android:onClick="onClick"
                />
            <ImageView
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/title"
                android:layout_centerInParent="true"
                />

        </RelativeLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/option_height"
                    android:background="@drawable/drawable_button_one"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:padding="5dp"
                    android:gravity="center_vertical"
                    android:onClick="onClick"
                    android:id="@+id/option_1"
                    >
                    <ImageView
                        android:layout_marginLeft="10dp"
                        android:layout_width="@dimen/option_icon_height"
                        android:layout_height="@dimen/option_icon_height"
                        android:src="@drawable/option_ic_1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_white"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:textSize="@dimen/text_size_normal"
                        android:text = "@string/signup_form"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/option_height"
                    android:background="@drawable/drawable_button_green"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:padding="5dp"
                    android:gravity="center_vertical"
                    android:onClick="onClick"
                    android:id="@+id/option_2"
                    >
                    <ImageView
                        android:layout_marginLeft="10dp"
                        android:layout_width="@dimen/option_icon_height"
                        android:layout_height="@dimen/option_icon_height"
                        android:src="@drawable/option_ic_2"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_white"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:textSize="@dimen/text_size_normal"
                        android:text = "@string/discount"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/option_height"
                    android:background="@drawable/drawable_button_pink"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:padding="5dp"
                    android:gravity="center_vertical"
                    android:onClick="onClick"
                    android:id="@+id/option_3">
                <ImageView
                    android:layout_marginLeft="10dp"
                    android:layout_width="@dimen/option_icon_height"
                    android:layout_height="@dimen/option_icon_height"
                    android:src="@drawable/option_ic_3"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_white"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:textSize="@dimen/text_size_normal"
                    android:text = "@string/free_demo"/>

            </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/option_height"
                    android:background="@drawable/drawable_button_orange"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:padding="5dp"
                    android:gravity="center_vertical"
                    android:onClick="onClick"
                    android:id="@+id/option_4">
                    <ImageView
                        android:layout_marginLeft="10dp"
                        android:layout_width="@dimen/option_icon_height"
                        android:layout_height="@dimen/option_icon_height"
                        android:src="@drawable/option_ic_4"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_white"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:textSize="@dimen/text_size_normal"
                        android:text = "@string/tournament"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/option_height"
                    android:background="@drawable/drawable_button_dark_green"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:padding="5dp"
                    android:gravity="center_vertical"
                    android:onClick="onClick"
                    android:id="@+id/option_5">
                    <ImageView
                        android:layout_marginLeft="10dp"
                        android:layout_width="@dimen/option_icon_height"
                        android:layout_height="@dimen/option_icon_height"
                        android:src="@drawable/option_ic_5"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_white"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:textSize="@dimen/text_size_normal"
                        android:text = "@string/iq_robot"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/option_height"
                    android:background="@drawable/drawable_google_play"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:padding="5dp"
                    android:gravity="center_vertical"
                    android:onClick="onClick"
                    android:id="@+id/option_6">
                    <ImageView
                        android:layout_marginLeft="10dp"
                        android:layout_width="@dimen/option_icon_height"
                        android:layout_height="@dimen/option_icon_height"
                        android:src="@drawable/option_ic_6"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_white"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:textSize="@dimen/text_size_normal"
                        android:text = "@string/google_play"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/option_height"
                    android:background="@drawable/drawable_google_play"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:padding="5dp"
                    android:gravity="center_vertical"
                    android:onClick="onClick"
                    android:id="@+id/option_7">
                    <ImageView
                        android:layout_marginLeft="10dp"
                        android:layout_width="@dimen/option_icon_height"
                        android:layout_height="@dimen/option_icon_height"
                        android:src="@drawable/option_ic_7"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_white"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:textSize="@dimen/text_size_normal"
                        android:text = "@string/notifications"/>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</RelativeLayout>